--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,6 +16,8 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <script src="https://kit.fontawesome.com/21c292d6dd.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -57,6 +59,22 @@
                     <hr>
                     <!-- Post content-->
                     <p>{{ post.content }}</p>
+
+                    {% if post.file_upload %}
+                        <a class="btn btn-outline-dark" href="{{ post.file_upload.url }}" role="button" download>Download:
+
+                            {% if post.get_file_ext == 'csv' %}
+                                <i class="fas fa-file-csv"></i>
+                            {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                <i class="fas fa-file-excel"></i>
+                            {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc' %}
+                                <i class="fas fa-file-word"></i>
+                            {% else %}
+                                <i class="fas fa-file-powerpoint"></i>
+                            {% endif %}
+                            {{ post.get_file_name }}
+                        </a>
+                    {% endif %}
                     <hr>
                     <!-- Comments section-->
                     <section class="mb-5">
