미리보기와 요약문 추가하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,6 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>{{ post.title }} - Blog</title>
-
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
         <!-- Custom Styles for this template -->
@@ -41,6 +40,8 @@
                 <div class="col-lg-8">
                     <!-- Post title-->
                     <h1 class="mt-4">{{ post.title }}</h1>
+                    <h5 class="text-muted">{{ post.hook_text }}</h5>
+
                     <!-- Author -->
                     <p class="lead">
                         by
