--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -74,8 +74,9 @@
     </div>
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9" id="main-area">
                 <h1>Blog</h1>
+            {% if post_list.exists %}
                 {% for p in post_list %}
                 <!-- Blog Post -->
                 <div class="card mb-4">
@@ -99,8 +100,9 @@
                     </div>
                 </div>
                 {% endfor %}
-
-
+            {% else %}
+                <h3>아직 게시물이 없습니다.</h3>
+            {% endif %}
                 <ul class="pagination justify-content-center my-4">
                     <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
                     <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
