--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -33,6 +33,15 @@
         <!-- Post content-->
         <p>{{ post.content }}</p>
 
+        {% if post.tags.exists %}
+            <i class="fa-solid fa-hashtag"></i>
+            {% for tag in post.tags.all %}
+                <a href="{{ tag.get_absolute_url }}" class="badge badge-light">{{ tag }}</a>
+            {% endfor %}
+            <br />
+            <br />
+        {% endif %}
+
         {% if post.file_upload %}
             <a class="btn btn-outline-dark" href="{{ post.file_upload.url }}" role="button" download>Download:
 
